# open-agent-orchestrator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  pytest.ini
backend/app/: config.py  crypto.py  domain.py  errors.py  leader.py  llm.py  logging.py  main.py  metrics.py  migrate.py  observability.py  plans.py  quota.py  redis_client.py  users.py  worker.py
backend/app/api/: agents.py  chats.py  health.py  mcp_servers.py  personas.py  providers.py  runs.py  skills.py  slack.py  stats.py  tool_configs.py  whatsapp.py  workflows.py
backend/app/db/: __init__.py  models.py  repos.py  seeds.py
backend/app/integrations/: sample_mcp_server.py
backend/app/runtime/: agent.py  checkpointer.py  compiler.py  events.py  middleware.py  state.py  tools.py  usage_callback.py
backend/app/services/: run_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_live.py  test_agents_crud.py  test_auth.py  test_chats_crud.py  test_correlation.py  test_feedback_stats.py  test_health.py  test_hil_run.py  test_hil_smoke.py  test_leader.py  test_live.py  test_memory_summary.py  test_personas_crud.py  test_run_concurrency.py  test_run_events_pubsub.py  test_run_failure.py  test_run_idempotency.py  test_run_live.py  test_run_queue.py  test_run_reconcile.py  test_run_timeout.py  test_seed_and_e2e.py  test_slack.py  test_subagents_tree.py  test_whatsapp.py  test_workflow_live.py  test_workflows_crud.py
(+64 files in other folders)
