[project]
name = "configurable-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "fastmcp>=3.3.1",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-redis>=0.4.1",
    "markdownify>=1.2.2",
    "numexpr>=2.14.1",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "pyyaml>=6.0.3",
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.42.0",
    "slowapi>=0.1.9",
    "twilio>=9.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sse-starlette>=3.4.4",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
